<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToDoListFragment"
    tools:showIn="@layout/activity_to_do_list">

    <TableLayout
        android:id="@+id/toDoList_inputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:shrinkColumns="1"
        android:stretchColumns="1"
        android:padding="10dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/task_titleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_titleLabel"
                />

            <EditText
                android:id="@+id/task_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/task_descLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_descLabel" />

            <EditText
                android:id="@+id/task_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/task_dateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_dateLabel" />

            <EditText
                android:id="@+id/task_dueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_date"
                />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/task_adtnlInfoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_adtnlInfoLabel"
                />

            <EditText
                android:id="@+id/task_adtnlInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                />

        </TableRow>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            />
    </TableLayout>

    <ListView
        android:id="@+id/task_tasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toDoList_inputs"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>